Updated CrowdCount project with latest code and setup

--- a/admin-login.html
+++ b/admin-login.html
@@ -30,6 +30,8 @@
     </div>
   </div>
 
+  <!-- ✅ Correct place for your login JS -->
   <script src="admin-login.js"></script>
 </body>
 </html>
+
